--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8">
-          <a href="index.html" id=logo>Trevor</a>
+          <nav class="navbar navbar">
+            <a class="navbar-brand" id=logo href="index.html">Trevor</a>
         </div>
         <nav class="col-md-4">
           <a href="index.html">About</a>
@@ -24,10 +25,12 @@
           <a href="contact.html">Contact</a>
         </nav>
       </div>
+      </nav>
+    </div>
     </div>
   </header>
 
-<!-- This is the Starter Code-->
+  <!-- This is the Starter Code-->
 
   <!-- <header id="masthead">
     <div class="container">
@@ -78,7 +81,7 @@
     </section>
   </div>
 
-<!-- This is the Starter Code-->
+  <!-- This is the Starter Code-->
 
   <!-- <div id="main-container" class="container">
     <section class="main-section">
