--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,8 @@
         <div class="container">
           <div class="row">
             <div class="col-md-8">
-              <a href="index.html" id=logo>Trevor</a>
+              <nav class="navbar navbar">
+                <a class="navbar-brand" id=logo href="index.html">Trevor</a>
             </div>
             <nav class="col-md-4">
               <a href="index.html">About</a>
@@ -23,6 +24,8 @@
               <a href="contact.html">Contact</a>
             </nav>
           </div>
+          </nav>
+        </div>
         </div>
       </header>
 
