--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8">
-          <nav class="navbar navbar">
+          <nav class="navbar">
             <a class="navbar-brand" id=logo href="index.html">Trevor</a>
         </div>
         <nav class="col-md-4">
@@ -104,7 +104,7 @@
 
   </div> -->
 
-  <footer>
+  <footer class="footer">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
