--- a/portfolio.html
+++ b/portfolio.html
@@ -11,23 +11,25 @@
 
 <body>
 
-    <header id="masthead">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-8">
-              <nav class="navbar navbar">
-                <a class="navbar-brand" id=logo href="index.html">Trevor</a>
-            </div>
-            <nav class="col-md-4">
-              <a href="index.html">About</a>
-              <a href="portfolio.html">Portfolio</a>
-              <a href="contact.html">Contact</a>
-            </nav>
-          </div>
-          </nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="index.html">Trevor</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
         </div>
-        </div>
-      </header>
+      </nav>
 
 <!-- This is the Starter Code-->
 
